# aegis_bloom

./: AegisBloom.entitlements  Cargo.toml  Hardened.xcconfig  Justfile  README.md  SEV-1-critical.md  build-android-libs.sh  build-ios-libs.sh  cdi.py  constant_time.rs  encrypt.py  extract.py  final-check.sh  hardened.rs  lsb.rs  receiver.py  resilient_embed.rs  secure_mem.rs  zi3s1JKt  zone_detection.comp  zone_mapper.py
crypto/: decrypt.py
docs/security/: whitepaper.md
fragment/: reassemble.py  split.py
interface/: sender.py
mobile/gpu/: zone_detection.metal
runbooks/post-mortems/: template.md
src/sandbox/: seccomp.rs
src/secure/: decoy_generator.rs
stego/: dct.py  embed.py  lsb.py  pixelmod.py
wasm/web/: zone_mapper_webgpu.ts
wasm/web/shaders/: zone_detect.wgsl
